# hyper-demo-app

./: Cargo.toml  README.md
src/: api.rs  client.rs  get.rs  main.rs  post.rs
src/api/: manage.rs  v1.rs  v2.rs
src/client/: server.rs
src/domain/: args.rs
