[package]
name = "hyper-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full", "http2"] }
tokio = { version = "1.11", features = ["full"] }
futures = { version = "0.3", features = ["std"] }
futures-util = "0.3"
bytes = "1.1"

# Serialization
serde = "1.0"
serde_json = "1.0"

# Logging and startup
env_logger = "0.9"
log = "0.4"
clap = "2.3"
